--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -3116,6 +3116,23 @@ textarea.form-control-lg {
   --bs-gradient: none;
 }
 
+.btn-indigo {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #1a21eb;
+  --bs-btn-border-color: #f4623a;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #1419c5;
+  --bs-btn-hover-border-color: #c34e2e;
+  --bs-btn-focus-shadow-rgb: 246, 122, 88;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #c34e2e;
+  --bs-btn-active-border-color: #b74a2c;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #f4623a;
+  --bs-btn-disabled-border-color: #f4623a;
+}
+
 .btn-link {
   --bs-btn-font-weight: 400;
   --bs-btn-color: var(--bs-link-color);
